[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/interactable/initial/interactable_template.gd" type="Script" id=1]
[ext_resource path="res://scenes/particles/general_effect/dialog_icon.tscn" type="PackedScene" id=2]

[node name="InteractableTemplate" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="Texture" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]

[node name="DialogIcon" parent="." instance=ExtResource( 2 )]
frame = 0

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="body_exited" from="." to="." method="on_body_exited"]
